--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -20,8 +20,8 @@
 				items="{
 					path: '/zjblessons_base_Headers',
 					sorter: {
-						path: 'DocumentNumber',
-						descending: false
+						path: 'DocumentDate',
+						descending: true
 					}
 				}"
 				noDataText="{worklistView>/tableNoDataText}"
