--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -1,30 +1,35 @@
 <mvc:View
-	controllerName="zjblessons.Worklist.controller.Object"
-	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:semantic="sap.f.semantic">
-
-	<semantic:SemanticPage
-		id="page"
-		headerPinnable="false"
-		toggleHeaderOnTitleClick="false"
-		busy="{objectView>/busy}"
-		busyIndicatorDelay="{objectView>/delay}">
-
-		<semantic:titleHeading>
-			<Title text="{DocumentNumber}" />
-		</semantic:titleHeading>
-
-		<semantic:headerContent>
-			<ObjectNumber
-			/>
-		</semantic:headerContent>
-
-		<semantic:sendEmailAction>
-			<semantic:SendEmailAction id="shareEmail" press="onShareEmailPress"/>
-		</semantic:sendEmailAction>
-
-
-	</semantic:SemanticPage>
-
+    controllerName="zjblessons.Worklist.controller.Object"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc"
+>
+    <Page
+        id="page"
+        showHeader="false"
+        busy="{objectView>/busy}"
+        busyIndicatorDelay="{objectView>/delay}"
+    >
+        <content>
+            <IconTabBar
+                backgroundDesign="Transparent"
+                headerMode="Inline"
+                class="sapUiResponsiveContentPadding"
+                select="onIconTabBarSelect"
+            >
+                <content />
+                <items>
+                    <IconTabFilter
+                        icon="{i18n>listIcon}"
+                        text="{i18n>objectList}"
+                        key="List"
+                    />
+                    <IconTabFilter
+                        icon="{i18n>allIcon}"
+                        text="{i18n>objectForm}"
+                        key="Form"
+                    />
+                </items>
+            </IconTabBar>
+        </content>
+    </Page>
 </mvc:View>
