--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -14,7 +14,7 @@
                 noDataText="{worklistView>/tableNoDataText}"
                 busyIndicatorDelay="{worklistView>/tableBusyDelay}"
                 growing="true"
-                growingThreshold="15" 
+                growingThreshold="15"
                 growingScrollToLoad="true"
                 updateFinished="onUpdateFinished"
             >
@@ -26,6 +26,7 @@
                                 text="{i18n>worklistTableTitle} ({= ${worklistView>/sCount}})"
                             />
                             <IconTabHeader
+                                backgroundDesign="Transparent"
                                 mode="Inline"
                                 class="sapUiResponsiveContentPadding"
                                 select="onIconTabHeaderSelect"
